Added ButtonGrid to Add Shopping View. Change square dimension in ButtonGridMatrix to two separate dimensions.

--- a/Home/Home.Presentation/ButtonGridControl/ButtonGridItemView.xaml
+++ b/Home/Home.Presentation/ButtonGridControl/ButtonGridItemView.xaml
@@ -30,7 +30,7 @@
             <StackPanel>
 
                 <Image Source="{Binding Image}"  />
-                <Label Background="Transparent" DockPanel.Dock="Bottom" Content="{Binding Header}" Margin="5" HorizontalContentAlignment="Center" />
+                <Label Background="Transparent" Content="{Binding Header}" Margin="5" HorizontalContentAlignment="Center" />
 
             </StackPanel>
         </Border>
