--- a/Home/Home.Presentation/ButtonGridControl/ButtonGridView.xaml
+++ b/Home/Home.Presentation/ButtonGridControl/ButtonGridView.xaml
@@ -7,7 +7,9 @@
              xmlns:buttonGridControl="clr-namespace:Home.Presentation.ButtonGridControl"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel Orientation="Vertical">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+        <Border Background="Transparent" Padding="5" CornerRadius="10">
+        
         <ItemsControl ItemsSource="{Binding Rows}" >
           
             <ItemsControl.ItemTemplate>
@@ -17,15 +19,12 @@
                     <ItemsControl  ItemsSource="{Binding Items}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <buttonGridControl:ButtonGridItemView>
-                                    
-                                    
-                                </buttonGridControl:ButtonGridItemView>
+                                <buttonGridControl:ButtonGridItemView/>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal"></StackPanel>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                     </ItemsControl>
@@ -34,7 +33,7 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        
-    </StackPanel>
+        </Border>
+    </ScrollViewer>
 </UserControl>
 
